--- a/css/base.css
+++ b/css/base.css
@@ -36,7 +36,7 @@ body{
 }
 body .main{
     flex: 1 0 auto;
-    background: url('/img/promo-bg.jpg') no-repeat center 50%/cover;
+    background: url('../img/promo-bg.jpg') no-repeat center 50%/cover;
     height: 800px;
     /* width: 1200px; */
 }
